--- a/popups.html
+++ b/popups.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="preload" href="./assets/fonts/icons.woff2" as="font" type="font/woff2" crossorigin="anonymous">
 		<link rel="shortcut icon" href="./assets/img/favicon.ico">
-		<title>Каталог</title>
+		<title>Попапи</title>
 		<script type="module" crossorigin="" src="./js/app.min.js?v=1755076721211"></script>
 		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1755076721211">
 	</head>
@@ -579,392 +579,23 @@
 				</div>
 			</div>
 			<main class="page">
-				<section class="page__catalog catalog">
-					<div class="catalog__container">
-						<div class="catalog__breadcrumbs breadcrumbs">
-							<ul>
-								<li>
-									<a href="#">Головна</a>
-								</li>
-								<li>
-									<a href="#">Чоловіче</a>
-								</li>
-								<li>
-									<a href="#">Футболки</a>
-								</li>
-							</ul>
-						</div>
-						<a href="#" class="catalog__link">￩ CATALOGUE</a>
-						<h1 class="catalog__title">Футболки</h1>
-						<div class="catalog__categories">
-							<a href="#" class="catalog__category --active">Футболки</a>
-							<a href="#" class="catalog__category">Майки</a>
-							<a href="#" class="catalog__category">Сорочки</a>
-							<a href="#" class="catalog__category">Лонгсліви</a>
-							<a href="#" class="catalog__category">Футболка</a>
-							<a href="#" class="catalog__category">Світшоти</a>
-							<a href="#" class="catalog__category">Куртки</a>
-							<a href="#" class="catalog__category">Шорти</a>
-							<a href="#" class="catalog__category">Штани</a>
-						</div>
-						<div class="catalog__filters filters-catalog">
-							<div class="filters-catalog__body">
-								<div data-fls-spoilers="768, max" class="filters-catalog__wrapper">
-									<button data-filter-toggle="" class="filters-catalog__close button button--black">Закрити</button>
-									<label class="filters-catalog__border-check border-check">
-										<input type="checkbox">
-										Тільки зі знижками
-									</label>
-									<details class="filters-catalog__item">
-										<summary class="filters-catalog__title">
-											Колір
-											<span class="plus-icon"></span>
-										</summary>
-										<div class="filters-catalog__content">
-											<div class="filters-catalog__colors">
-												<label class="filters-catalog__checkbox checkbox">
-													Чорний
-													<input type="checkbox">
-												</label>
-												<label class="filters-catalog__checkbox checkbox">
-													Зелений
-													<input type="checkbox">
-												</label>
-												<label class="filters-catalog__checkbox checkbox">
-													Білий
-													<input type="checkbox">
-												</label>
-												<label class="filters-catalog__checkbox checkbox">
-													Помаранчевий
-													<input type="checkbox">
-												</label>
-												<label class="filters-catalog__checkbox checkbox">
-													Бежевий
-													<input type="checkbox">
-												</label>
-												<label class="filters-catalog__checkbox checkbox">
-													Рожевий
-													<input type="checkbox">
-												</label>
-												<label class="filters-catalog__checkbox checkbox">
-													Синій
-													<input type="checkbox">
-												</label>
-												<label class="filters-catalog__checkbox checkbox">
-													Червоний
-													<input type="checkbox">
-												</label>
-												<label class="filters-catalog__checkbox checkbox">
-													Коричневий
-													<input type="checkbox">
-												</label>
-												<label class="filters-catalog__checkbox checkbox">
-													Камуфляжний
-													<input type="checkbox">
-												</label>
-												<label class="filters-catalog__checkbox checkbox">
-													Сірий
-													<input type="checkbox">
-												</label>
-												<label class="filters-catalog__checkbox checkbox">
-													Різнокольоровий
-													<input type="checkbox">
-												</label>
-												<label class="filters-catalog__checkbox checkbox">
-													Жовтий
-													<input type="checkbox">
-												</label>
-												<label class="filters-catalog__checkbox checkbox">
-													Світловідбиваючий
-													<input type="checkbox">
-												</label>
-											</div>
-										</div>
-									</details>
-									<details class="filters-catalog__item">
-										<summary class="filters-catalog__title">
-											Розмір
-											<span class="plus-icon"></span>
-										</summary>
-										<div class="filters-catalog__content">
-											<div class="filters-catalog__sizes">
-												<label class="filters-catalog__checkbox checkbox">
-													S
-													<input type="checkbox">
-												</label>
-												<label class="filters-catalog__checkbox checkbox">
-													M
-													<input type="checkbox">
-												</label>
-												<label class="filters-catalog__checkbox checkbox">
-													L
-													<input type="checkbox">
-												</label>
-												<label class="filters-catalog__checkbox checkbox">
-													XL
-													<input type="checkbox">
-												</label>
-												<label class="filters-catalog__checkbox checkbox">
-													XXL
-													<input type="checkbox">
-												</label>
-												<label class="filters-catalog__checkbox checkbox">
-													XXXL
-													<input type="checkbox">
-												</label>
-											</div>
-										</div>
-									</details>
-								</div>
-								<div class="filters-catalog__sort">
-									<button data-filter-toggle="" class="filters-catalog__open button button--black">
-										Показати фільтри
-										<div class="plus-icon"></div>
-									</button>
-									<select name="form[]" data-fls-select="" data-fls-select-modif="sort">
-										<option value="" selected>Сортування</option>
-										<option value="2">За популярністю</option>
-										<option value="3">Спочатку дешевші</option>
-										<option value="4">Спочатку нові</option>
-									</select>
-									<label class="filters-catalog__sort-radio _icon-sort">
-										Спочатку нові
-										<input checked type="radio" name="sort">
-									</label>
-									<label class="filters-catalog__sort-radio _icon-sort">
-										Спочатку дешевші
-										<input type="radio" name="sort">
-									</label>
-									<label class="filters-catalog__sort-radio _icon-sort">
-										За популярністю
-										<input type="radio" name="sort">
-									</label>
-								</div>
-							</div>
-						</div>
-						<div class="catalog__items">
-							<article class="item-product">
-								<div class="item-product__image">
-									<a href="#"></a>
-									<img class="ibg" alt="Image" src="./assets/img/products/01.webp">
-									<img class="ibg hover" alt="Image" src="./assets/img/products/05.webp">
-									<div class="item-product__header">
-										<div class="separator"></div>
-										<!-- _icon-heart-fill -->
-										<div class="item-product__fav fav-btn _icon-heart"></div>
-									</div>
-									<div class="item-product__cart-label button button--white _icon-plus">додати у кошик</div>
-								</div>
-								<div class="item-product__body">
-									<h3 class="item-product__title">
-										<a href="#">
-											Футболка
-											<span>Drohnenwaffe Oversize</span>
-										</a>
-									</h3>
-									<div class="item-product__price">1 250 ₴</div>
-								</div>
-							</article>
-							<article class="item-product">
-								<div class="item-product__image">
-									<a href="#"></a>
-									<img class="ibg" alt="Image" src="./assets/img/products/01.webp">
-									<img class="ibg hover" alt="Image" src="./assets/img/products/05.webp">
-									<div class="item-product__header">
-										<div class="separator"></div>
-										<!-- _icon-heart-fill -->
-										<div class="item-product__fav fav-btn _icon-heart"></div>
-									</div>
-									<div class="item-product__cart-label button button--white _icon-plus">додати у кошик</div>
-								</div>
-								<div class="item-product__body">
-									<h3 class="item-product__title">
-										<a href="#">
-											Футболка
-											<span>Drohnenwaffe Oversize</span>
-										</a>
-									</h3>
-									<div class="item-product__price">1 250 ₴</div>
-								</div>
-							</article>
-							<article class="item-product">
-								<div class="item-product__image">
-									<a href="#"></a>
-									<img class="ibg" alt="Image" src="./assets/img/products/01.webp">
-									<img class="ibg hover" alt="Image" src="./assets/img/products/05.webp">
-									<div class="item-product__header">
-										<div class="separator"></div>
-										<!-- _icon-heart-fill -->
-										<div class="item-product__fav fav-btn _icon-heart"></div>
-									</div>
-									<div class="item-product__cart-label button button--white _icon-plus">додати у кошик</div>
-								</div>
-								<div class="item-product__body">
-									<h3 class="item-product__title">
-										<a href="#">
-											Футболка
-											<span>Drohnenwaffe Oversize</span>
-										</a>
-									</h3>
-									<div class="item-product__price">1 250 ₴</div>
-								</div>
-							</article>
-							<article class="item-product">
-								<div class="item-product__image">
-									<a href="#"></a>
-									<img class="ibg" alt="Image" src="./assets/img/products/01.webp">
-									<img class="ibg hover" alt="Image" src="./assets/img/products/05.webp">
-									<div class="item-product__header">
-										<div class="separator"></div>
-										<!-- _icon-heart-fill -->
-										<div class="item-product__fav fav-btn _icon-heart"></div>
-									</div>
-									<div class="item-product__cart-label button button--white _icon-plus">додати у кошик</div>
-								</div>
-								<div class="item-product__body">
-									<h3 class="item-product__title">
-										<a href="#">
-											Футболка
-											<span>Drohnenwaffe Oversize</span>
-										</a>
-									</h3>
-									<div class="item-product__price">1 250 ₴</div>
-								</div>
-							</article>
-							<article class="item-product">
-								<div class="item-product__image">
-									<a href="#"></a>
-									<img class="ibg" alt="Image" src="./assets/img/products/01.webp">
-									<img class="ibg hover" alt="Image" src="./assets/img/products/05.webp">
-									<div class="item-product__header">
-										<div class="separator"></div>
-										<!-- _icon-heart-fill -->
-										<div class="item-product__fav fav-btn _icon-heart"></div>
-									</div>
-									<div class="item-product__cart-label button button--white _icon-plus">додати у кошик</div>
-								</div>
-								<div class="item-product__body">
-									<h3 class="item-product__title">
-										<a href="#">
-											Футболка
-											<span>Drohnenwaffe Oversize</span>
-										</a>
-									</h3>
-									<div class="item-product__price">1 250 ₴</div>
-								</div>
-							</article>
-							<article class="item-product">
-								<div class="item-product__image">
-									<a href="#"></a>
-									<img class="ibg" alt="Image" src="./assets/img/products/01.webp">
-									<img class="ibg hover" alt="Image" src="./assets/img/products/05.webp">
-									<div class="item-product__header">
-										<div class="separator"></div>
-										<!-- _icon-heart-fill -->
-										<div class="item-product__fav fav-btn _icon-heart"></div>
-									</div>
-									<div class="item-product__cart-label button button--white _icon-plus">додати у кошик</div>
-								</div>
-								<div class="item-product__body">
-									<h3 class="item-product__title">
-										<a href="#">
-											Футболка
-											<span>Drohnenwaffe Oversize</span>
-										</a>
-									</h3>
-									<div class="item-product__price">1 250 ₴</div>
-								</div>
-							</article>
-							<article class="item-product">
-								<div class="item-product__image">
-									<a href="#"></a>
-									<img class="ibg" alt="Image" src="./assets/img/products/01.webp">
-									<img class="ibg hover" alt="Image" src="./assets/img/products/05.webp">
-									<div class="item-product__header">
-										<div class="separator"></div>
-										<!-- _icon-heart-fill -->
-										<div class="item-product__fav fav-btn _icon-heart"></div>
-									</div>
-									<div class="item-product__cart-label button button--white _icon-plus">додати у кошик</div>
-								</div>
-								<div class="item-product__body">
-									<h3 class="item-product__title">
-										<a href="#">
-											Футболка
-											<span>Drohnenwaffe Oversize</span>
-										</a>
-									</h3>
-									<div class="item-product__price">1 250 ₴</div>
-								</div>
-							</article>
-							<article class="item-product">
-								<div class="item-product__image">
-									<a href="#"></a>
-									<img class="ibg" alt="Image" src="./assets/img/products/01.webp">
-									<img class="ibg hover" alt="Image" src="./assets/img/products/05.webp">
-									<div class="item-product__header">
-										<div class="separator"></div>
-										<!-- _icon-heart-fill -->
-										<div class="item-product__fav fav-btn _icon-heart"></div>
-									</div>
-									<div class="item-product__cart-label button button--white _icon-plus">додати у кошик</div>
-								</div>
-								<div class="item-product__body">
-									<h3 class="item-product__title">
-										<a href="#">
-											Футболка
-											<span>Drohnenwaffe Oversize</span>
-										</a>
-									</h3>
-									<div class="item-product__price">1 250 ₴</div>
-								</div>
-							</article>
-						</div>
-						<div class="catalog__footer">
-							<button class="catalog__more button button--border">Показати ще</button>
-							<ul class="catalog__pagination pagination">
-								<li>
-									<a class="--active" href="#">1</a>
-								</li>
-								<li>
-									<a href="#">2</a>
-								</li>
-								<li>
-									<a href="#">3</a>
-								</li>
-								<li>
-									<a href="#">4</a>
-								</li>
-								<li>
-									<a href="#">￫</a>
-								</li>
-								<li>
-									<a href="#">￫￫</a>
-								</li>
-							</ul>
-						</div>
-					</div>
-				</section>
-				<div class="page__mission mission-section">
-					<div class="mission-section__container">
-						<div class="mission-section__body">
-							<div class="mission-section__image">
-								<img class="ibg" alt="Image" src="./assets/img/home/mission/bg.webp">
-							</div>
-							<div class="mission-section__content">
-								<div class="mission-section__icon">
-									<img src="./assets/img/home/mission/logo.svg" alt="Image">
-								</div>
-								<p class="mission-section__text">
-									Наша мета - підвищувати якість життя наших споживачів щодня, пропонуючи їм більш якісний та доступний
-            одяг,
-            заохочуючи та підтримуючи здоровий спосіб життя та фундаментальні європейські цінності.
-								</p>
-							</div>
-						</div>
+				<div class="page__popups popups">
+					<div class="popups__container">
+						<button data-fls-popup-link="review-popup" class="button">Review</button>
+						<button data-fls-popup-link="checkout-popup" class="button">Checkout</button>
+						<button data-fls-popup-link="login-popup" class="button">Login</button>
+						<button data-fls-popup-link="reg-popup" class="button">Register</button>
 					</div>
 				</div>
 			</main>
+			<style>
+				.popups__container {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    gap: 10px;
+  }
+			</style>
 			<footer data-fls-footer="" class="footer">
 				<div class="footer__top">
 					<div class="footer__container">
